Make sure to handle creation of a new continuation of the first-letter frame even if we pulled the first-letter frame from our next-in-flow.  Bug 372553, r+sr=roc.